feat: Implementar paginación en respuestas de API y añadir controladores para productos y técnicos
